29/06/2024:
	- Updated autoconf tiff m4 to search for tiffio.h rather than just tiff.h when using TIFFOpen().


29/05/2024:
	- Modification to IIIF region "square" parameter to correctly center the cropped image region.
	- Fix to aspect ratio calculation within CVT.cc to always perform calculation on full resolution scale
	  to avoid rounding issues when calculating at lower resolution levels.


05/02/2024:
	- Added JPEG2000 codec version information to logging.
	- Change to exception handling with Kakadu to avoid crash with mal-formed JPEG2000 streams. Fixes
	  https://github.com/ruven/iipsrv/issues/264.


26/01/2024:
	- Disable pass-through for TIFF-JPEGs where YCbCr sub-sampling has been defined with an RGB color space -
	  these require the full JFIF format rather than the abreviated JPEG within the TIFF


25/01/2024:
	- Fix to calculation of DPI in pixels/m when returned in IIP OBJ request


16/01/2024:
	- Added ability to specify lossless WebP compression by specifying a quality factor of -1


15/01/2024:
	- Fix to IIIF size calculation for region requests that go beyond the boundaries of the image


11/01/2024:
	- Added COPYRIGHT startup variable, which allows a global copyright or rights statement to be added.
	  The IIIF image info.json file now adds a rights (IIIF v3) or license (v1/2) field with rights information
	  from the image itself if available or if not from any global setting.
	- Added IIIF_EXTRA_INFO startup variable, which allows an arbitrary field to be added to all IIIF info.json
	  files. Can be used, for example, to add a preferredFormats or other JSON field.


10/01/2024:
	- Set quality when using pass-through mode to allow cache to sort correctly


21/12/2023:
	- Added CODEC_PASSTHROUGH mode, which allows TIFF image tiles that are already in the requested output
	  format to be used without going through a decode->encode process. This provides a significant speed